--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Компонент для отображения предпросмотра камеры (фон) -->
+    <!-- Предпросмотр камеры -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="0dp"
@@ -18,22 +18,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:scaleType="fillCenter" />
 
-    <!-- ImageView для наложения загруженного изображения -->
-    <!-- Важно: scaleType="matrix" для применения трансформаций -->
+    <!-- ImageView для наложения (растягиваем на весь экран) -->
     <ImageView
         android:id="@+id/overlayImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scaleType="matrix"
-        android:visibility="gone"  />
-        <!-- Пока скрыто -->
-        <!--app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/overlay_image_description" /> --> <!-- Добавьте строку в strings.xml -->
+        android:scaleType="matrix"
+        android:visibility="gone"
+        android:contentDescription="@string/overlay_image_description" />
 
-    <!-- Кнопка для загрузки изображения -->
+    <!-- Кнопка Загрузить -->
     <Button
         android:id="@+id/load_image_button"
         android:layout_width="wrap_content"
@@ -44,22 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Ползунок для управления ЗУМОМ КАМЕРЫ -->
-    <com.google.android.material.slider.Slider
-        android:id="@+id/zoom_slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:valueFrom="0.0"
-        android:valueTo="1.0"
-        android:stepSize="0.01"
-        app:layout_constraintBottom_toTopOf="@id/transparency_slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Ползунок для управления ПРОЗРАЧНОСТЬЮ ИЗОБРАЖЕНИЯ -->
+    <!-- Ползунок ПРОЗРАЧНОСТИ ИЗОБРАЖЕНИЯ (внизу) -->
     <com.google.android.material.slider.Slider
         android:id="@+id/transparency_slider"
         android:layout_width="0dp"
@@ -70,11 +53,26 @@
         android:valueFrom="0.0"
         android:valueTo="1.0"
         android:stepSize="0.05"
-        android:value="1.0"  />
-        <!-- Начальное значение - непрозрачный -->
-        <!--app:layout_constraintBottom_toBottomOf="parent"
+        android:value="1.0"
+        android:visibility="gone" <!-- СКРЫТ ПО УМОЛЧАНИЮ -->
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone" /> --> <!-- Пока скрыт -->
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Ползунок ЗУМА КАМЕРЫ (над ползунком прозрачности) -->
+    <com.google.android.material.slider.Slider
+        android:id="@+id/zoom_slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp" <!-- Отступ от нижнего слайдера -->
+        android:valueFrom="0.0"
+        android:valueTo="1.0"
+        android:stepSize="0.01"
+        android:visibility="visible" <!-- ВИДИМ ПО УМОЛЧАНИЮ (если камера поддерживает) -->
+        app:layout_constraintBottom_toTopOf="@id/transparency_slider" <!-- Привязка к верху нижнего слайдера -->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
