--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<!-- Полный путь к файлу: /root/CameraPreview/app/src/main/res/layout/activity_main.xml -->
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -31,12 +32,31 @@
         android:visibility="gone"
         android:contentDescription="@string/overlay_image_description" />
 
-    <!-- Группа элементов управления -->
+    <!-- Чекбокс видимости контролов (остается видимым) -->
+    <CheckBox
+        android:id="@+id/controlsVisibilityCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Управление"
+        android:checked="true" <!-- По умолчанию включен -->
+        android:textColor="@android:color/white"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Группа элементов управления, которые будут скрываться/показываться -->
+    <!-- НЕ включаем сюда controlsVisibilityCheckbox -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,zoom_slider,transparency_slider" />
+        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,zoom_slider,transparency_slider"
+        android:visibility="visible" /> <!-- Начальное состояние - видимы -->
 
     <!-- Кнопка Загрузить -->
     <Button
