--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<!-- Полный путь к файлу: /root/CameraPreview/app/src/main/res/layout/activity_main.xml -->
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,6 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Предпросмотр камеры -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="0dp"
@@ -17,6 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:scaleType="fillCenter" />
 
+    <!-- ImageView для наложения -->
     <ImageView
         android:id="@+id/overlayImageView"
         android:layout_width="0dp"
@@ -29,13 +32,14 @@
         android:visibility="gone"
         android:contentDescription="@string/overlay_image_description" />
 
+    <!-- Чекбокс видимости контролов -->
     <CheckBox
         android:id="@+id/controlsVisibilityCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Управление"
+        android:text="@string/controls_label"
         android:checked="true"
         android:textColor="@android:color/white"
         android:shadowColor="@android:color/black"
@@ -45,13 +49,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Группа элементов управления (БЕЗ КНОПКИ СЛОЕВ) -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,zoom_slider,transparency_slider"
+        <!-- <<< УДАЛЕНО: layerSelectButton ИЗ СПИСКА >>> -->
+        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,zoom_slider,transparency_slider"
         android:visibility="visible" />
 
+    <!-- Кнопка Загрузить -->
     <Button
         android:id="@+id/load_image_button"
         android:layout_width="wrap_content"
@@ -62,6 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Переключатель Карандашного режима -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/pencilModeSwitch"
         android:layout_width="wrap_content"
@@ -77,16 +85,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
+    <!-- Кнопка выбора слоев (НЕ В ГРУППЕ) -->
      <Button
         android:id="@+id/layerSelectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Слои"
-        android:visibility="gone"
+        android:visibility="gone" <!-- Скрыта по умолчанию -->
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
+    <!-- Ползунок ПРОЗРАЧНОСТИ ИЗОБРАЖЕНИЯ -->
     <com.google.android.material.slider.Slider
         android:id="@+id/transparency_slider"
         android:layout_width="0dp"
@@ -103,6 +113,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Ползунок ЗУМА КАМЕРЫ -->
     <com.google.android.material.slider.Slider
         android:id="@+id/zoom_slider"
         android:layout_width="0dp"
