--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<!-- Полный путь к файлу: /root/CameraPreview/app/src/main/res/layout/activity_main.xml -->
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -53,9 +54,8 @@
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        <!-- <<< УДАЛЕНО: layerSelectButton ИЗ СПИСКА >>> -->
         app:constraint_referenced_ids="load_image_button,pencilModeSwitch,zoom_slider,transparency_slider"
-        android:visibility="visible" />
+        android:visibility="visible" /> <!-- Комментарий удален отсюда -->
 
     <!-- Кнопка Загрузить -->
     <Button
@@ -84,14 +84,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
-    <!-- Кнопка выбора слоев (НЕ В ГРУППЕ) -->
+    <!-- Кнопка выбора слоев -->
      <Button
         android:id="@+id/layerSelectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Слои"
-        android:visibility="gone" <!-- Скрыта по умолчанию -->
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
