--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Просмотр камеры (заполняет весь экран) -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="0dp"
@@ -15,8 +16,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:scaleType="fillCenter" />
+        app:scaleType="fillCenter" /> <!-- или другой scaleType по вашему усмотрению -->
 
+    <!-- Наложение изображения (заполняет весь экран, изначально скрыто) -->
     <ImageView
         android:id="@+id/overlayImageView"
         android:layout_width="0dp"
@@ -27,15 +29,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:scaleType="matrix"
         android:visibility="gone"
-        android:contentDescription="@string/overlay_image_description" />
+        android:contentDescription="@string/overlay_image_description" /> <!-- Определите эту строку в strings.xml -->
 
+    <!-- Основной чекбокс видимости элементов управления (справа сверху) -->
     <CheckBox
         android:id="@+id/controlsVisibilityCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/controls_label"
+        android:text="@string/controls_label" <!-- Определите эту строку в strings.xml -->
         android:checked="true"
         android:textColor="@android:color/white"
         android:shadowColor="@android:color/black"
@@ -45,13 +48,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- НОВЫЙ Чекбокс для показа кнопки "Слои", когда контролы скрыты (под основным, изначально скрыт) -->
+    <CheckBox
+        android:id="@+id/showLayersWhenControlsHiddenCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp" <!-- Небольшой отступ сверху -->
+        android:text="Показать Слои" <!-- Или @string/show_layers_hidden -->
+        android:checked="false"
+        android:textColor="@android:color/white"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1"
+        android:visibility="gone"  <!-- Изначально скрыт -->
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/controlsVisibilityCheckbox" />
+
+    <!-- Группа для управления видимостью основных контролов -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,zoom_slider,transparency_slider,linkZoomSwitch"
-        android:visibility="visible" />
+        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,linkZoomSwitch,zoom_slider,transparency_slider"
+        android:visibility="visible" /> <!-- Изначально видимы, т.к. controlsVisibilityCheckbox включен -->
 
+    <!-- Кнопка Загрузить (слева сверху) -->
     <Button
         android:id="@+id/load_image_button"
         android:layout_width="wrap_content"
@@ -62,6 +85,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Переключатель Карандаш (под кнопкой Загрузить) -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/pencilModeSwitch"
         android:layout_width="wrap_content"
@@ -77,16 +101,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
+    <!-- Кнопка Слои (под переключателем Карандаш, изначально скрыта) -->
      <Button
         android:id="@+id/layerSelectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp" <!-- Добавлен отступ -->
         android:text="Слои"
-        android:visibility="gone"
+        android:visibility="gone" <!-- Управляется из кода -->
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
+    <!-- Слайдер прозрачности (внизу) -->
+    <com.google.android.material.slider.Slider
+        android:id="@+id/transparency_slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:valueFrom="0.0"
+        android:valueTo="1.0"
+        android:stepSize="0.05"
+        android:value="1.0"
+        android:visibility="gone" <!-- Изначально скрыт -->
+        android:enabled="false" <!-- Изначально выключен -->
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Слайдер зума (над слайдером прозрачности) -->
+    <com.google.android.material.slider.Slider
+        android:id="@+id/zoom_slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:valueFrom="0.0"
+        android:valueTo="1.0"
+        android:stepSize="0.01"
+        android:visibility="visible" <!-- Изначально виден, но может быть выключен камерой -->
+        app:layout_constraintBottom_toTopOf="@id/transparency_slider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Переключатель Связать зум (над слайдером зума) -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/linkZoomSwitch"
         android:layout_width="wrap_content"
@@ -99,39 +160,8 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1"
-        android:enabled="false"
+        android:enabled="false" <!-- Изначально выключен (до загрузки картинки) -->
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/zoom_slider" />
-
-    <com.google.android.material.slider.Slider
-        android:id="@+id/transparency_slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:valueFrom="0.0"
-        android:valueTo="1.0"
-        android:stepSize="0.05"
-        android:value="1.0"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <com.google.android.material.slider.Slider
-        android:id="@+id/zoom_slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:valueFrom="0.0"
-        android:valueTo="1.0"
-        android:stepSize="0.01"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@id/transparency_slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
