--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
-        android:text="Показать Слои"
+        <!-- Текст удален -->
         android:checked="false"
         android:textColor="@android:color/white"
         android:shadowColor="@android:color/black"
