--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,14 +48,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- НОВЫЙ Чекбокс для показа кнопки "Слои", когда контролы скрыты (под основным, изначально скрыт) -->
+    <!-- НОВЫЙ Чекбокс для показа кнопки "Слои", когда контролы скрыты -->
     <CheckBox
         android:id="@+id/showLayersWhenControlsHiddenCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
-        <!-- Комментарий здесь удален -->
         android:checked="false"
         android:textColor="@android:color/white"
         android:shadowColor="@android:color/black"
