--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Просмотр камеры (заполняет весь экран) -->
+    <!-- Просмотр камеры -->
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
         android:layout_width="0dp"
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:scaleType="fillCenter" />
 
-    <!-- Наложение изображения (заполняет весь экран, изначально скрыто) -->
+    <!-- Наложение изображения -->
     <ImageView
         android:id="@+id/overlayImageView"
         android:layout_width="0dp"
@@ -31,7 +31,7 @@
         android:visibility="gone"
         android:contentDescription="@string/overlay_image_description" />
 
-    <!-- Основной чекбокс видимости элементов управления (справа сверху) -->
+    <!-- Основной чекбокс видимости элементов управления -->
     <CheckBox
         android:id="@+id/controlsVisibilityCheckbox"
         android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- НОВЫЙ Чекбокс для показа кнопки "Слои", когда контролы скрыты -->
+    <!-- Чекбокс для показа кнопки "Слои", когда контролы скрыты -->
     <CheckBox
         android:id="@+id/showLayersWhenControlsHiddenCheckbox"
         android:layout_width="wrap_content"
@@ -70,10 +70,10 @@
         android:id="@+id/controlsGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,linkZoomSwitch,zoom_slider,transparency_slider"
+        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,layerSelectButton,saveParamsButton,loadParamsButton,linkZoomSwitch,zoom_slider,transparency_slider"
         android:visibility="visible" />
 
-    <!-- Кнопка Загрузить (слева сверху) -->
+    <!-- Кнопка Загрузить -->
     <Button
         android:id="@+id/load_image_button"
         android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Переключатель Карандаш (под кнопкой Загрузить) -->
+    <!-- Переключатель Карандаш -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/pencilModeSwitch"
         android:layout_width="wrap_content"
@@ -100,7 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
-    <!-- Кнопка Слои (под переключателем Карандаш, изначально скрыта) -->
+    <!-- Кнопка Слои -->
      <Button
         android:id="@+id/layerSelectButton"
         android:layout_width="wrap_content"
@@ -112,7 +112,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
-    <!-- Слайдер прозрачности (внизу) -->
+    <!-- Кнопка Сохранить Параметры -->
+    <Button
+        android:id="@+id/saveParamsButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Сохр.Пар."
+        android:textSize="12sp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layerSelectButton"/>
+
+    <!-- Кнопка Загрузить Параметры -->
+    <Button
+        android:id="@+id/loadParamsButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Загр.Пар."
+        android:textSize="12sp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/saveParamsButton"
+        app:layout_constraintTop_toTopOf="@id/saveParamsButton"
+        app:layout_constraintBottom_toBottomOf="@id/saveParamsButton"/>
+
+    <!-- Слайдер прозрачности -->
     <com.google.android.material.slider.Slider
         android:id="@+id/transparency_slider"
         android:layout_width="0dp"
@@ -130,7 +162,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Слайдер зума (над слайдером прозрачности) -->
+    <!-- Слайдер зума -->
     <com.google.android.material.slider.Slider
         android:id="@+id/zoom_slider"
         android:layout_width="0dp"
@@ -146,7 +178,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Переключатель Связать зум (над слайдером зума) -->
+    <!-- Переключатель Связать зум -->
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/linkZoomSwitch"
         android:layout_width="wrap_content"
